; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/i810/extr_i810_main.c_i810fb_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/i810/extr_i810_main.c_i810fb_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { %struct.i810fb_par* }
%struct.i810fb_par = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fb_info*, i32)* @i810fb_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i810fb_release(%struct.fb_info* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fb_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.i810fb_par*, align 8
  store %struct.fb_info* %0, %struct.fb_info** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.fb_info*, %struct.fb_info** %4, align 8
  %8 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %7, i32 0, i32 0
  %9 = load %struct.i810fb_par*, %struct.i810fb_par** %8, align 8
  store %struct.i810fb_par* %9, %struct.i810fb_par** %6, align 8
  %10 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %11 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %10, i32 0, i32 1
  %12 = call i32 @mutex_lock(i32* %11)
  %13 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %14 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %19 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %18, i32 0, i32 1
  %20 = call i32 @mutex_unlock(i32* %19)
  %21 = load i32, i32* @EINVAL, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %42

23:                                               ; preds = %2
  %24 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %25 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp eq i32 %26, 1
  br i1 %27, label %28, label %34

28:                                               ; preds = %23
  %29 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %30 = call i32 @i810_restore_vga_state(%struct.i810fb_par* %29)
  %31 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %32 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %31, i32 0, i32 2
  %33 = call i32 @restore_vga(i32* %32)
  br label %34

34:                                               ; preds = %28, %23
  %35 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %36 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = add nsw i32 %37, -1
  store i32 %38, i32* %36, align 4
  %39 = load %struct.i810fb_par*, %struct.i810fb_par** %6, align 8
  %40 = getelementptr inbounds %struct.i810fb_par, %struct.i810fb_par* %39, i32 0, i32 1
  %41 = call i32 @mutex_unlock(i32* %40)
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %34, %17
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @i810_restore_vga_state(%struct.i810fb_par*) #1

declare dso_local i32 @restore_vga(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
